[tool.poetry]
name = "mqtt"
version = "0.1.0"
description = "paho-mqtt wrapers and playground"
authors = ["Patryk-Foryszewski <patryk.foryszewski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
